--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,15 +15,14 @@
 	<link rel="stylesheet" href="css/media.css">
 	<title>Kinn home</title>
 </head>
+
 <body>
 
 	<header class="header">
 		<div class="header__container">
 			<div class="header__inner">
 				<button class="menu-btn" type="button">
-					<span class="menu-btn__line">
-
-					</span>
+					<span class="menu-btn__line"></span>
 				</button>
 				<nav class="menu">
 					<a class="menu__link" href="#">
@@ -89,7 +89,7 @@
 					<a class="blockquote__link" href="#">
 						Read Stories
 						<img class="blockquote__link-img" src="img/icons/link-arrow.svg" alt="arrow">
-					</a>				
+					</a>
 				</div>
 			</div>
 		</blockquote>
@@ -284,4 +284,5 @@
 
 	<script src="js/app.js"></script>
 </body>
+
 </html>
